--- a/application.css
+++ b/application.css
@@ -1,19 +1,39 @@
+html, header {
+    height: 100%;
+}
+
 body {
-    text-align: center;
+    text-align: left;
     
     
-    color: white;
+    color: black;
     font-family: helvetica;
 }
 
 header {
-    background: url("assets/table_rock.jpg");
+    text-align: center;
+    background: url("assets/sunset.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    -moz-background-size: cover;
+    min-height: 100%;
+    color: white;
     
 }
 
 .profile-img {
     float: left;
+    padding: 10px;
+    border: 7px solid white;
+    border-radius: 20px;
+}
+
+h1 {
+    padding-top: 250px;
+}
+
+.tagline {
+    padding: 25px;
+    margin-top: 100px;
 }
