--- a/application.css
+++ b/application.css
@@ -26,7 +26,7 @@ header {
 .profile-img {
     float: left;
     margin: 25px;
-    border: 20px solid black;
+    border: 7px solid black;
     border-radius: 40px;
     -moz-border-radius: 40px;
     -webkit-border-radius: 40px;
@@ -44,4 +44,8 @@ h1 {
 
 ul {
     margin-left: 10px;
+}
+
+img {
+    border-radius: 20px;
 }
