--- a/assets/application.css
+++ b/assets/application.css
@@ -4,15 +4,13 @@ html, header {
 
 body {
     text-align: left;
-    
-    
     color: black;
     font-family: helvetica;
 }
 
 header {
     text-align: center;
-    background: url("assets/sunset.jpg");
+    background: url("sunset.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -35,6 +33,7 @@ header {
 
 h1 {
     padding-top: 250px;
+    font-size: 70px;
 }
 
 .tagline {
@@ -42,10 +41,30 @@ h1 {
     margin-top: 100px;
 }
 
-ul {
-    margin-left: 10px;
+.links {
+    float: right;
 }
 
-img {
-    border-radius: 40px;
+.navbar {
+    background-color: rgba(0,0,0,0.5);
 }
+
+.content {
+    max-width: 800px;
+    padding: 20px;
+    margin: 0 auto;
+    padding-top: 25px;
+}
+
+.title {
+    font-size: 24px;
+    text-align: center;
+    padding-bottom: 25px;
+}
+
+@media (max-width: 800px) {
+    h1 {
+        font-size: 36px;
+    }
+}
+
