--- a/assets/application.css
+++ b/assets/application.css
@@ -24,10 +24,6 @@ header {
 .profile-img {
     float: left;
     margin: 25px;
-    border: 7px solid black;
-    border-radius: 20px;
-    -moz-border-radius: 20px;
-    -webkit-border-radius: 20px;
     box-shadow: 2px 2px 6px rgba(0,0,0,0.6);
 }
 
@@ -43,6 +39,8 @@ h1 {
 
 .links {
     float: right;
+    margin-right: 20px;
+    padding-right: 20px;
 }
 
 .navbar {
