--- a/assets/application.css
+++ b/assets/application.css
@@ -23,7 +23,7 @@ header {
 
 .profile-img {
     float: left;
-    margin: 25px;
+    margin-left: 100px;
     box-shadow: 2px 2px 6px rgba(0,0,0,0.6);
 }
 
