--- a/assets/application.css
+++ b/assets/application.css
@@ -24,6 +24,7 @@ header {
 .profile-img {
     float: left;
     margin-left: 100px;
+    margin-top: 25px;
     box-shadow: 2px 2px 6px rgba(0,0,0,0.6);
 }
 
