--- a/assets/application.css
+++ b/assets/application.css
@@ -28,12 +28,17 @@ header {
     box-shadow: 2px 2px 6px rgba(0,0,0,0.6);
 }
 
-.project-img {
+
+.project-img-container {
     float: left;
-    margin-left: 100px;
-    margin-top: 25px;
+    margin: 25px;
+    max-width: 50px;
+    max-height: 50px;
 }
 
+.project-img-container img {
+    width: 100%;
+    height: auto;
 
 h1 {
     padding-top: 250px;
