--- a/assets/application.css
+++ b/assets/application.css
@@ -30,6 +30,7 @@ h1 {
     float: left;
     margin-left: 100px;
     margin-top: 25px;
+    border-radius: 25px;
     box-shadow: 2px 2px 6px rgba(0,0,0,0.6);
 }
 
