--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -10,7 +10,7 @@ body {
 
 header {
     text-align: center;
-    background: url("sunset.jpg");
+    background: url("assets/images/sunset.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -40,11 +40,13 @@ h1 {
     margin: 25px;
     max-width: 250px;
     max-height: 250px;
+    clear: right;
 }
 
 .project-img-container img {
     width: 100%;
     height: auto;
+    clear: right;
 }
 
 .tagline {
