--- a/assets/css/calculator.css
+++ b/assets/css/calculator.css
@@ -19,14 +19,20 @@
 
 .button {
   padding: 10px;
-  border: 1px solid white;
+  border-left: 2px solid white;
+  border-top: 2px solid gray;
+  border-bottom: 1px solid gray;
+  border-right: 1px solid gray;
   color: white;
   text-align: center;
   margin-left: 4px;
   float: none;
 }
 .button:active {
-  border: 1px solid gray;
+  border-right: 2px solid white;
+  border-bottom: 2px solid gray;
+  border-left: 1px solid white;
+  border-top: 1px solid gray;
 }
 
 
