--- a/assets/css/calculator.css
+++ b/assets/css/calculator.css
@@ -3,6 +3,7 @@
   border: 1px solid gray;
   max-width: 215px;
   margin-left: 20px;
+  box-shadow: 10px 10px 5px gray;
 }
 
 .row {
@@ -20,7 +21,7 @@
 .button {
   padding: 10px;
   border-left: 2px solid white;
-  border-top: 2px solid gray;
+  border-top: 2px solid white;
   border-bottom: 1px solid gray;
   border-right: 1px solid gray;
   color: white;
@@ -30,7 +31,7 @@
 }
 .button:active {
   border-right: 2px solid white;
-  border-bottom: 2px solid gray;
+  border-bottom: 2px solid white;
   border-left: 1px solid white;
   border-top: 1px solid gray;
 }
