--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -29,6 +29,7 @@ h1 {
 .profile-img {
     float: left;
     margin-left: 100px;
+    margin-right: 20px;
     margin-top: 25px;
     border-radius: 25px;
     box-shadow: 2px 2px 6px rgba(0,0,0,0.6);
