--- a/css/creative.css
+++ b/css/creative.css
@@ -129,6 +129,12 @@ aside {
     font-size: 13px;
 }
 
+.reporting li {
+    list-style-type: none;
+    font-size: 16px;
+    
+}
+
 @media(min-width:768px) {
     .navbar-default {
         border-color: rgba(255,255,255,.3);
