--- a/css/slideshow.css
+++ b/css/slideshow.css
@@ -1,46 +1,65 @@
-#MainDiv
-{
-    position: relative;
-    width:800px;
+h1 {
+  font-family: Georgia, Serif;
+  text-decoration: none;
 }
 
-#child .NextButton
-{
-    position: absolute;
-    height: 5%;
-    width: 5%;
-    top: 50%;
-    right: 2%;
+p {
+  font-family: Georgia, Serif;
+  text-decoration: none;
 }
 
-#child .PreButton
-{
-    position: absolute;
-    height: 5%;
-    width: 5%;
-    top: 50%;
-    left: 2%;
+#text {
+  text-align: center;
+  font-weight: bold;
+  font-family: Georgia, Serif;
+  text-decoration: none;
 }
 
-#slider
-{
-    width: 800px;
-    overflow: hidden;
-    position: relative;
-    margin-bottom: 10%;
+#image {
+	margin-top: 30px;
+	width: 100%;
 }
 
-    #slider .slides
-    {
-        display: block;
-        width: 8000px;
-        margin: 0;
-        padding: 0;
-    }
+#container {
+  width: 75%;
+  text-align: center;
+}
 
-    #slider .slide
-    {
-        float: left;
-        list-style-type: none;
-        height:120px;
-    }
+button {
+   border-top: 1px solid #0a1821;
+   background: #d3e1eb;
+   background: -webkit-gradient(linear, left top, left bottom, from(#a3bcc9), to(#d3e1eb));
+   background: -webkit-linear-gradient(top, #a3bcc9, #d3e1eb);
+   background: -moz-linear-gradient(top, #a3bcc9, #d3e1eb);
+   background: -ms-linear-gradient(top, #a3bcc9, #d3e1eb);
+   background: -o-linear-gradient(top, #a3bcc9, #d3e1eb);
+   padding: 5px 10px;
+   -webkit-border-radius: 6px;
+   -moz-border-radius: 6px;
+   border-radius: 6px;
+   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   box-shadow: rgba(0,0,0,1) 0 1px 0;
+   text-shadow: rgba(0,0,0,.4) 0 1px 0;
+   color: #000000;
+   font-family: Georgia, Serif;
+   text-decoration: none;
+   vertical-align: middle;
+   }
+button:hover {
+   border-top-color: #28597a;
+   background: #4c7591;
+   color: #ccc;
+   }
+button:active {
+   border-top-color: #1b435e;
+   background: #1b435e;
+   }
+
+#left {
+	float: left;
+}
+
+#right {
+	float: right;
+}
