--- a/css/creative.css
+++ b/css/creative.css
@@ -125,14 +125,14 @@ aside {
     text-transform: uppercase;
     font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
     font-weight: 700;
-    color: #f05f40;    
+    color: #f05f40;
     font-size: 13px;
 }
 
 .reporting li {
     list-style-type: none;
     font-size: 16px;
-    
+
 }
 
 @media(min-width:768px) {
@@ -192,7 +192,7 @@ header {
     min-height: auto;
     text-align: center;
     color: #fff;
-    background-image: url(../assets/images/header.jpg);
+    background-image: url(../assets/images/sunset.jpg);
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
